Complete Milestone 3: ROM loading and rendering
Milestone 3 is now complete - Off Road Challenge ROM successfully loads
and renders graphics to the screen via WebGL2.

Core Implementation:
- Integrate ParaLLEl N64 core from N64Wasm project (pre-compiled)
- Load all required Emscripten files (.js, .wasm, .data)
- Implement ROM loading into virtual filesystem
- Set up assets.zip loading for shaders and fonts
- Configure input controller script loading
- Initialize canvas with proper focus and tabindex for input

Key Files Added:
- public/n64wasm.js - ParaLLEl N64 core loader (250KB)
- public/n64wasm.wasm - Compiled emulator core (2MB)
- public/assets.zip - Emulator assets (204KB)
- public/input_controller.js - N64 controller input handler
- src/emulator/rom-loader.ts - ROM and asset loading logic
- README.md - Project overview and status

Technical Details:
- Use window.Module pattern for Emscripten initialization
- Write assets and ROM to Emscripten FS before calling callMain()
- Canvas configured for WebGL2 rendering
- Proper initialization sequence: input → core → assets → ROM → start

Documentation Updates:
- TECHNICAL.md: Added Milestone 3 completion details and implementation
- ROADMAP.md: Marked all M3 tasks as complete
- README.md: Created with current status and quick start guide

Visual Confirmation:
- Canvas displays Off Road Challenge title screen
- No black screen issues
- WebGL2 rendering pipeline active
- No JavaScript errors during initialization

Next: Milestone 4 - Audio, input verification, and save persistence

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div id="app">
       <h1>N64WASM</h1>
       <p id="status">Initializing emulator...</p>
-      <canvas id="canvas" width="640" height="480"></canvas>
+      <canvas id="canvas" width="640" height="480" tabindex="0"></canvas>
       <div id="error"></div>
 
       <div class="controls">
@@ -127,6 +127,7 @@
         </table>
       </div>
     </div>
+    <!-- Main module will load input_controller.js dynamically -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
